# Logikos

./: .gitignore  CLAUDE.md  README.md  README_LOGIKOS.md  WARP.md  changes.md  launch.sh  requirements.txt  run_workflow.py  simple_qwen_server.py  simple_start.sh  start.sh  start_both.sh  start_frontend.sh  start_full_app.sh  start_new_backend.py  test_logikos.py  test_new_architecture.py  test_qwen.sh
ai/: __init__.py  ai_solver.py  qwen_solver.py  response_parser.py
backend/: config.py
backend/api/: main.py
backend/input_processor/: classifier.py
backend/solvers/: ai_reasoner.py  confidence.py  sympy_solver.py
docs/: AI_PROVIDERS.md
mathviz/: AI_IMPLEMENTATION_SUMMARY.md  AI_INTEGRATION_ANALYSIS.md  CHAT_INTERFACE.md  CUSTOM_MODEL_QUICKSTART.md  CUSTOM_MODEL_TRAINING.md  PROJECT_STATUS.md  README.md  demo.py  demo_ai_system.py  demo_chat.py  examples.py  pyproject.toml  run_chat.py  run_mathviz.py  run_simple_chat.py  test_debug.py  test_minimal.py  test_no_ai.py  test_output.txt  test_pipeline_debug.py
mathviz-backend/: README.md  main.py
mathviz-frontend/: README.md  package-lock.json  package.json  tsconfig.json
mathviz-frontend/public/: index.html
mathviz-frontend/src/: App.tsx
mathviz-frontend/src/components/: DesmosGraph.tsx  MathVizChat.tsx  MessageBubble.tsx  ModernMathChat.tsx  SolutionDisplay.tsx
mathviz/src/mathviz/: __init__.py  advanced_calculus.py  ai_apis.py  ai_parser.py  api.py  chat_app.py  custom_model.py  educational_viz.py  graph_visualizer.py  modern_chat_app.py  parser.py  pipeline.py  reasoning.py  schemas.py  simple_chat_app.py  solver.py  step_explainer.py  streamlit_app.py  trace.py  validator.py  viz.py
mathviz/src/mathviz/ai/: __init__.py  base.py  graphing.py
mathviz/src/mathviz/ai/providers/: ollama.py  stub.py
mathviz/tests/: test_ai_implementation.py  test_pipeline.py
mathviz/training/: create_dataset.py  finetune_simple.py
mathviz/training/training_data/: train.json  validation.json
shared/: schemas.py
sympy_backend/: __init__.py  expression_parser.py  solver.py  verifier.py
tests/: test_integration.py
visualization/: __init__.py  latex_formatter.py  step_visualizer.py
(+4 files in other folders)
