[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathviz"
version = "0.1.0"
description = "Mathematical problem visualization and solving pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "sympy>=1.12",
    "numpy>=1.24.0",
    "pint>=0.22",
    "plotly>=5.15.0",
    "fastapi>=0.100.0",
    "streamlit>=1.25.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",  # For testing FastAPI endpoints
]
web = [
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
viz = [
    "plotly>=5.17.0",
    "matplotlib>=3.7.0",
    "kaleido>=0.2.1",  # For static image export
]
all = [
    "mathviz[dev,web,viz]"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
